vlib/v/checker/tests/assign_ref_call_expr_with_ref_return_err.vv
@[heap]
struct Foo {}

fn foo() &Foo {
	return &Foo{}
}

_ := &foo()
